--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_install:
     - pip install pytest pytest-cov
     - pip install coveralls
 script:
-    - py.test
+    - pytest
 after_success:
     - coveralls
