--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ before_install:
     - pip install coveralls
 script:
     - pytest
+    - pip install - python -m pytest . --cov=.
 after_success:
     - coveralls
