updated testing configs

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,2 @@
 [tool:pytest]
-addopts = --doctest-modules --cov-report term-missing --cov DualNumbers_test.py
+adopts = --doctest-modules --cov=. --cov-report term-missing
