--- a/spacejam/.travis.yml
+++ b/spacejam/.travis.yml
@@ -5,7 +5,8 @@ before_install:
     - pip install pytest pytest-cov
     - pip install coveralls
 script:
+    - cd spacejam
     - pytest
-    - python -m pytest --doctest-modules --cov=spacejam --cov-report term-missing
+    - python -m pytest --doctest-modules --cov=. --cov-report term-missing
 after_success:
     - coveralls
