--- a/spacejam/requirements.txt
+++ b/spacejam/requirements.txt
@@ -1,11 +1,11 @@
-atomicwrites==1.2.1
-attrs==18.2.0
-coverage==4.5.2
-more-itertools==4.3.0
-numpy==1.15.4
-pluggy==0.8.0
-py==1.7.0
-pytest==4.0.1
-pytest-cov==2.6.0
-six==1.11.0
-spacejam==0.0.3
+atomicwrites~=1.2.1
+attrs~=18.2.0
+coverage~=4.5.2
+more-itertools~=4.3.0
+numpy~=1.15.4
+pluggy~=0.8.0
+py~=1.7.0
+pytest~=4.0.1
+pytest-cov~=2.6.0
+six~=1.11.0
+spacejam~=0.0.3
